# backend/app/src/routes/swagger.json
@@ -1,150 +1,221 @@
 {
-	"components": {
-		"examples": {},
-		"headers": {},
-		"parameters": {},
-		"requestBodies": {},
-		"responses": {},
-		"schemas": {
-			"PingResponse": {
-				"properties": {
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"CreateRandomPersonParams": {
-				"properties": {
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"FlattenMaps_T_": {
-				"properties": {},
-				"type": "object"
-			},
-			"IRandomPersonModel": {
-				"$ref": "#/components/schemas/FlattenMaps_T_"
-			},
-			"RandomPeopleArray": {
-				"properties": {
-					"people": {
-						"items": {
-							"$ref": "#/components/schemas/IRandomPersonModel"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"people"
-				],
-				"type": "object",
-				"additionalProperties": false
-			}
-		},
-		"securitySchemes": {}
-	},
-	"info": {
-		"title": "CHANGE ME",
-		"version": "1.0.0",
-		"license": {
-			"name": "ISC"
-		},
-		"contact": {}
-	},
-	"openapi": "3.0.0",
-	"paths": {
-		"/misc/ping": {
-			"get": {
-				"operationId": "Ping",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/PingResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Miscellaneous"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "name",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/misc/random-person": {
-			"post": {
-				"operationId": "CreateRandomPerson",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"tags": [
-					"Miscellaneous"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/CreateRandomPersonParams"
-							}
-						}
-					}
-				}
-			},
-			"get": {
-				"operationId": "GetRandomPeople",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/RandomPeopleArray"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Miscellaneous"
-				],
-				"security": [],
-				"parameters": []
-			}
-		}
-	},
-	"servers": [
-		{
-			"url": "/api"
-		}
-	]
+    "components": {
+        "examples": {},
+        "headers": {},
+        "parameters": {},
+        "requestBodies": {},
+        "responses": {},
+        "schemas": {
+            "PingResponse": {
+                "properties": {
+                    "message": {
+                        "type": "string"
+                    }
+                },
+                "required": ["message"],
+                "type": "object",
+                "additionalProperties": false
+            },
+            "CreateRandomPersonParams": {
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    }
+                },
+                "required": ["name"],
+                "type": "object",
+                "additionalProperties": false
+            },
+            "FlattenMaps_T_": {
+                "properties": {},
+                "type": "object"
+            },
+            "IRandomPersonModel": {
+                "$ref": "#/components/schemas/FlattenMaps_T_"
+            },
+            "RandomPeopleArray": {
+                "properties": {
+                    "people": {
+                        "items": {
+                            "$ref": "#/components/schemas/IRandomPersonModel"
+                        },
+                        "type": "array"
+                    }
+                },
+                "required": ["people"],
+                "type": "object",
+                "additionalProperties": false
+            },
+            "HttpStatusCodeLiteral": {
+                "type": "number",
+                "enum": [
+                    100, 101, 102, 200, 201, 202, 203, 204, 205, 206, 207, 208, 226, 300, 301, 302,
+                    303, 304, 305, 307, 308, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410,
+                    411, 412, 413, 414, 415, 416, 417, 418, 422, 423, 424, 426, 428, 429, 431, 451,
+                    500, 501, 502, 503, 504, 505, 506, 507, 508, 510, 511
+                ]
+            },
+            "RegisterResponse": {
+                "properties": {
+                    "success": {
+                        "type": "boolean"
+                    },
+                    "code": {
+                        "$ref": "#/components/schemas/HttpStatusCodeLiteral"
+                    },
+                    "message": {
+                        "type": "string"
+                    },
+                    "data": {},
+                    "errors": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {}
+                        ]
+                    }
+                },
+                "required": ["success", "code"],
+                "type": "object",
+                "additionalProperties": false
+            },
+            "RegisterBody": {
+                "properties": {
+                    "username": {
+                        "type": "string"
+                    },
+                    "email": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    },
+                    "confirmPassword": {
+                        "type": "string"
+                    }
+                },
+                "required": ["username", "email", "password", "confirmPassword"],
+                "type": "object",
+                "additionalProperties": false
+            }
+        },
+        "securitySchemes": {}
+    },
+    "info": {
+        "title": "CHANGE ME",
+        "version": "1.0.0",
+        "license": {
+            "name": "ISC"
+        },
+        "contact": {}
+    },
+    "openapi": "3.0.0",
+    "paths": {
+        "/misc/ping": {
+            "get": {
+                "operationId": "Ping",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PingResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": ["Miscellaneous"],
+                "security": [],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "name",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ]
+            }
+        },
+        "/misc/random-person": {
+            "post": {
+                "operationId": "CreateRandomPerson",
+                "responses": {
+                    "204": {
+                        "description": "No content"
+                    }
+                },
+                "tags": ["Miscellaneous"],
+                "security": [],
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateRandomPersonParams"
+                            }
+                        }
+                    }
+                }
+            },
+            "get": {
+                "operationId": "GetRandomPeople",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/RandomPeopleArray"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": ["Miscellaneous"],
+                "security": [],
+                "parameters": []
+            }
+        },
+        "/users/register": {
+            "post": {
+                "operationId": "Register",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/RegisterResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": ["Users"],
+                "security": [],
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/RegisterBody"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "servers": [
+        {
+            "url": "/api"
+        }
+    ]
 }
